<resources>
    <!-- App common string -->
    <string name="app_name">GGCJ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="date">%2$s/%3$s/%1$s</string>

    <!-- NavBars && Menu -->
    <string name="nav_home">Home</string>
    <string name="nav_notice">Notice</string>
    <string name="nav_notice_parents">Notice for Parents</string>
    <string name="nav_date">Calendar</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_timetable">Timetable</string>
    <string name="nav_app">Application</string>
    <string name="nav_send">Send</string>
    <string name="nav_send_intent">Choose email app</string>
    <string name="nav_info">Info</string>
    <string name="menu_school_website">School Website</string>
    <string name="menu_notice_website">View at Website</string>

    <!-- Meal & Schedule -->
    <string name="meal">Meal</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="schedule">Schedule</string>
    <string name="no_lunch_data">No Lunch Data</string>
    <string name="no_dinner_data">No Dinner Data</string>
    <string name="no_schedule_data">No Schedule Data</string>
    <string name="no_lunch">No Lunch</string>
    <string name="no_dinner">No Dinner</string>
    <string name="no_schedule">No Schedule</string>
    <string name="next_schedule">No schedule today\nNext schedule is %1$s(%2$s)</string>
    <string name="no_next_schedule">No more schedule this month</string>
    <string name="kcal">%1$s Kcal</string>
    <string name="data_empty_dialog">There\'s no %1$s data!\nDo you want to download %1$s data now?</string>

    <!-- School Info -->
    <string name="school_code" translatable="false">J100005831</string>
    <string name="school_type" translatable="false">4</string>

    <!-- Notice -->
    <string name="first_page">First Page!</string>
    <string name="last_page">Last Page!</string>
    <string name="warning">Warning!</string>
    <string name="table_warning">This post include table!\nDeveloper recommend see this post on website.</string>

    <!-- URLs -->
    <string name="notice_url" translatable="false">http://ggcj.hs.kr/main.php?menugrp=050100&amp;master=bbs&amp;act=list&amp;master_sid=30&amp;SearchCategory=&amp;SearchColumn=&amp;SearchValue=&amp;Page=%1$d</string>
    <string name="notice_parents_url" translatable="false">http://ggcj.hs.kr/main.php?menugrp=030100&amp;master=bbs&amp;act=list&amp;master_sid=18&amp;SearchCategory=&amp;SearchColumn=&amp;SearchValue=&amp;Page=%1$d</string>
    <string name="gallery_url" translatable="false">http://ggcj.hs.kr/main.php?menugrp=050800&amp;master=bbs&amp;act=list&amp;master_sid=35&amp;SearchCategory=&amp;SearchColumn=&amp;SearchValue=&amp;Page=%1$d</string>
    <string name="gallery_url_filter" translatable="false">http://ggcj.hs.kr/main.php?menugrp=050800&amp;master=bbs&amp;act=list&amp;master_sid=35&amp;SearchCategory=&amp;SearchColumn=&amp;SearchValue=&amp;Page=</string>
    <string name="neis_schedule" translatable="false">https://stu.%1$s.go.kr/sts_sci_sf01_001.do?schulCode=%2$s&amp;schulCrseScCode=%3$s&amp;schulKndScCode=0%3$s&amp;ay=%4$s&amp;mm=%5$s</string>

    <!-- Info -->
    <string name="info_title">Info</string>
    <string name="opensource">Open Source</string>
    <string name="github">Github</string>
    <string name="my_github">Developer\'s Github</string>
    <string name="ggcj_code">Source Code</string>
    <string name="view_code">View GGCJ Source Code</string>
    <string name="license">Open Source License</string>
    <string name="license_check">Check Open Source License</string>
    <string name="developer">Developer</string>
    <string name="developer_name">WooJin Kong (Kongjak)</string>

    <!-- Intro -->
    <string name="intro_1_title">Welcome!</string>
    <string name="intro_1_desc">Thanks to download GGCJ App</string>
    <string name="intro_2_title">Calender</string>
    <string name="intro_2_desc">
        Check Meal &amp; Schedule at Calender menu\n
        Just select any date!</string>
    <string name="intro_3_title">School Notices</string>
    <string name="intro_3_desc">Now see all school notices in GGCJ App!</string>

    <!-- Open API -->
    <string name="api_region_code" translatable="false">J10</string>
    <string name="api_school_code" translatable="false">7530937</string>
    <string name="api_key" translatable="false">KEY</string>
</resources>
