<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="setting"
    android:title="@string/info_title">

    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/developer">
        <Preference
            android:title="@string/developer"
            android:summary="@string/developer_name">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://kongjak.com/" />
        </Preference>
        <Preference
            android:title="@string/github"
            android:summary="@string/my_github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/kongwoojin" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="openSource"
        android:title="@string/opensource">
        <Preference
            android:key="allSource"
            android:title="@string/license"
            android:summary="@string/license_check"/>
        <Preference
            android:title="@string/ggcj_code"
            android:summary="@string/view_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/kongwoojin/ggcj" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>